# tetrs

./: .gitignore  Cargo.toml  license.txt  readme.md
core/: Cargo.toml  readme.md
core/src/: lib.rs  scene.rs  state.rs  well.rs
game/: Cargo.toml  build.rs  readme.md
game/src/: events.rs  input.rs  main.rs
learning/: Cargo.toml  readme.md
learning/src/: main.rs
src/: bot.rs  lib.rs  player.rs  pt.rs  rot.rs  state.rs  well.rs
tetrs/: Cargo.toml  readme.md
tetrs/src/: bag.rs  bot.rs  clock.rs  input.rs  lib.rs  piece.rs  player.rs  pt.rs  rot.rs  scene.rs  srs.rs  state.rs  tile.rs  well.rs
tetrs/src/rules/: mod.rs
tetrs/tests/: codegen.rs
